; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/staging/winbond/extr_wbusb.c_hal_set_accept_beacon.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/staging/winbond/extr_wbusb.c_hal_set_accept_beacon.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.hw_data = type { i64, %struct.wb35_reg }
%struct.wb35_reg = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.hw_data*, i64)* @hal_set_accept_beacon to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @hal_set_accept_beacon(%struct.hw_data* %0, i64 %1) #0 {
  %3 = alloca %struct.hw_data*, align 8
  %4 = alloca i64, align 8
  %5 = alloca %struct.wb35_reg*, align 8
  store %struct.hw_data* %0, %struct.hw_data** %3, align 8
  store i64 %1, i64* %4, align 8
  %6 = load %struct.hw_data*, %struct.hw_data** %3, align 8
  %7 = getelementptr inbounds %struct.hw_data, %struct.hw_data* %6, i32 0, i32 1
  store %struct.wb35_reg* %7, %struct.wb35_reg** %5, align 8
  %8 = load %struct.hw_data*, %struct.hw_data** %3, align 8
  %9 = getelementptr inbounds %struct.hw_data, %struct.hw_data* %8, i32 0, i32 0
  %10 = load i64, i64* %9, align 8
  %11 = icmp ne i64 %10, 0
  br i1 %11, label %12, label %13

12:                                               ; preds = %2
  br label %35

13:                                               ; preds = %2
  %14 = load i64, i64* %4, align 8
  %15 = icmp ne i64 %14, 0
  br i1 %15, label %17, label %16

16:                                               ; preds = %13
  br label %35

17:                                               ; preds = %13
  %18 = load %struct.wb35_reg*, %struct.wb35_reg** %5, align 8
  %19 = getelementptr inbounds %struct.wb35_reg, %struct.wb35_reg* %18, i32 0, i32 0
  %20 = load i32, i32* %19, align 4
  %21 = and i32 %20, -67108865
  store i32 %21, i32* %19, align 4
  %22 = load i64, i64* %4, align 8
  %23 = icmp ne i64 %22, 0
  br i1 %23, label %24, label %29

24:                                               ; preds = %17
  %25 = load %struct.wb35_reg*, %struct.wb35_reg** %5, align 8
  %26 = getelementptr inbounds %struct.wb35_reg, %struct.wb35_reg* %25, i32 0, i32 0
  %27 = load i32, i32* %26, align 4
  %28 = or i32 %27, 67108864
  store i32 %28, i32* %26, align 4
  br label %29

29:                                               ; preds = %24, %17
  %30 = load %struct.hw_data*, %struct.hw_data** %3, align 8
  %31 = load %struct.wb35_reg*, %struct.wb35_reg** %5, align 8
  %32 = getelementptr inbounds %struct.wb35_reg, %struct.wb35_reg* %31, i32 0, i32 0
  %33 = load i32, i32* %32, align 4
  %34 = call i32 @Wb35Reg_Write(%struct.hw_data* %30, i32 2048, i32 %33)
  br label %35

35:                                               ; preds = %29, %16, %12
  ret void
}

declare dso_local i32 @Wb35Reg_Write(%struct.hw_data*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
